[package]
name = "svnpasswd"
version = "0.1.0"
authors = ["sdir"]
edition = "2018"
repository = "https://github.com/sdir/svnpasswd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi"] }
